<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">聚会助手</string>
    <string name="edit_message">Enter a message</string>
    <string name="search_hint">请输入游戏名称</string>
    <string name="button_send">send</string>
    <!-- actions -->
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="action_share">分享</string>
    <string name="action_favorite">收藏</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <!-- types -->
    <string name="all_type">全部类型</string>
    <string name="puzzle_games">益智类</string>
    <string name="adult_games">重口味</string>
    <string name="child_games">小清新</string>
    <string name="boyPreffered">纯爷们</string>
    <string name="girlPreffered">萌妹子</string>
    <!-- place -->
    <string name="all_place">场所不限</string>
    <string name="indoor">室内</string>
    <string name="outdoor">户外</string>
    <!-- labels -->
    <string name="label_type">游戏类型:</string>
    <string name="label_age">适合年龄:</string>
    <string name="label_place">适合场所:</string>
    <string name="label_people_number">适合人数:</string>
    <string name="label_start">开始</string>
    <string name="label_stop">停止</string>
   <string name="label_set_time">设置时间:</string>
   <string name="label_reset">重置</string>
   <string name="label_second">秒</string>
    <!-- arrays -->
    <string-array name="array_type">
        <item>全部类型</item>
        <item>益智类</item>
        <item>重口味</item>
        <item>小清新</item>
    </string-array>
    <string-array name="array_age">
        <item>全部年龄</item>
        <item>小学生</item>
        <item>初中生</item>
        <item>高中生</item>
        <item>大学生</item>
        <item>上班族</item>
    </string-array>
    <string-array name="array_place">
        <item>所有场所</item>
        <item>室内</item>
        <item>户外</item>
    </string-array>
    <string-array name="array_counts">
        <item>人数不限</item>
        <item>2人</item>
        <item>3&#8211;5人</item>
        <item>6&#8211;10人</item>
        <item>10人以上</item>
    </string-array>

    <string name="shuffle_text">摇一摇</string>
    <string name="dice_text">掷骰子</string>
    <string name="clock_text">计时器</string>
    <string name="draw_text">随手画</string>
    <string name="content_img_btn_clock">jump to the countdown clock</string>
    <string name="content_img_btn">a button with image</string>
    <string name="content_img">show a image</string>
    <string name="title_activity_shake">摇一摇</string>
    <string name="title_activity_game_item">GameItemActivity</string>
    <string name="title_sample">游戏名称</string>
    <string name="title_empty"></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_items_list"></string>
    <string name="title_favorite">我的收藏</string>
    <!-- string name="app_name">辅助功能</string -->
    <string name="title_activity_main_interface">小工具</string>
    <string name="title_activity_picture">随手画</string>
    <string name="title_activity_draw_path">Draw_Path</string>
    <string name="title_activity_my_draw">MyDraw</string>
    <string name="title_activity_chronometer_demo">计时器</string>
    <string name="webView_button">webview</string>
    <string name="draw_button">开始画图</string>

</resources>