<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_horizontal_margin" >

    <!-- title -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/game_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:text="@string/title_sample"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp" />

        <!-- image & brief introduction -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/game_item_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_img"
                android:src="@drawable/ic_game_80x80" />

            <!-- title -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:textSize="24sp" >

                <TextView
                    android:id="@+id/game_item_type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_type" />

                <TextView
                    android:id="@+id/game_item_age_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_age" />

                <TextView
                    android:id="@+id/game_item_place_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_place" />

                <TextView
                    android:id="@+id/game_item_number_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_people_number" />
            </LinearLayout>

            <!-- content -->

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/game_item_type_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/game_item_age_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/game_item_place_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/game_item_number_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/game_detail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/title_sample"
            android:textSize="24sp" />
    </LinearLayout>
    <!-- foot banner -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/buttom_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/child_games"
            android:drawableTop="@drawable/camera_dark_48x48"
            android:gravity="center"
            android:text="@string/child_games" />
    </LinearLayout>

</LinearLayout>