<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/imgBtnShuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/shuffle_text"
            android:drawableTop="@drawable/shuffle_dark_80x80"
            android:gravity="center"
            android:text="@string/shuffle_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/imgBtnDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/dice_text"
            android:drawableTop="@drawable/dice_dark_80x80"
            android:gravity="center"
            android:text="@string/dice_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/imgBtnClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/clock_text"
            android:drawableTop="@drawable/clock_80x80"
            android:gravity="center"
            android:text="@string/clock_text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imgBtnType_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_img_btn"
            android:src="@drawable/ic_game_80x80" />

        <ImageButton
            android:id="@+id/imgBtnType_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_img_btn"
            android:src="@drawable/ic_game_80x80" />

        <ImageButton
            android:id="@+id/imgBtnType_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_img_btn"
            android:src="@drawable/ic_game_80x80" />
    </LinearLayout>

</LinearLayout>