<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btnTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/clock_text"
            android:drawableTop="@drawable/clock_80x80"
            android:gravity="center"
            android:text="@string/clock_text"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|top"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btnDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/dice_text"
            android:drawableTop="@drawable/dice_dark_80x80"
            android:gravity="center_horizontal"
            android:text="@string/dice_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btnPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/draw_text"
            android:drawableTop="@drawable/draw_80x80"
            android:gravity="center"
            android:text="@string/draw_text"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>